refactored to allow expansion of tables
