# aea/cli_gui/swagger.yaml
@@ -12,126 +12,6 @@ basePath: /api
 
 # Paths supported by the server application
 paths:
-  /people:
-    get:
-      operationId: people.read_all
-      tags:
-        - People
-      summary: Read the entire list of people
-      description: Read the list of people
-      parameters:
-        - name: length
-          in: query
-          type: integer
-          description: Number of people to get from people
-          required: false
-        - name: offset
-          in: query
-          type: integer
-          description: Offset from beginning of list where to start gathering people
-          required: false
-      responses:
-        200:
-          description: Successfully read people list operation
-          schema:
-            type: array
-            items:
-              properties:
-                fname:
-                  type: string
-                lname:
-                  type: string
-                timestamp:
-                  type: string
-
-    post:
-      operationId: people.create
-      tags:
-        - People
-      summary: Create a person and add it to the people list
-      description: Create a new person in the people list
-      parameters:
-        - name: person
-          in: body
-          description: Person to create
-          required: True
-          schema:
-            type: object
-            properties:
-              fname:
-                type: string
-                description: First name of person to create
-              lname:
-                type: string
-                description: Last name of person to create
-      responses:
-        201:
-          description: Successfully created person in list
-
-  /people/{lname}:
-    get:
-      operationId: people.read_one
-      tags:
-        - People
-      summary: Read one person from the people list
-      description: Read one person from the people list
-      parameters:
-        - name: lname
-          in: path
-          description: Last name of the person to get from the list
-          type: string
-          required: True
-      responses:
-        200:
-          description: Successfully read person from people list operation
-          schema:
-            properties:
-              fname:
-                type: string
-              lname:
-                type: string
-              timestamp:
-                type: string
-
-    put:
-      operationId: people.update
-      tags:
-        - People
-      summary: Update a person in the people list
-      description: Update a person in the people list
-      parameters:
-        - name: lname
-          in: path
-          description: Last name of the person to update in the list
-          type: string
-          required: True
-        - name: person
-          in: body
-          schema:
-            type: object
-            properties:
-              fname:
-                type: string
-              lname:
-                type: string
-      responses:
-        200:
-          description: Successfully updated person in people list
-
-    delete:
-      operationId: people.delete
-      tags:
-        - People
-      summary: Delete a person from the people list
-      description: Delete a person
-      parameters:
-        - name: lname
-          in: path
-          type: string
-          required: True
-      responses:
-        200:
-          description: Successfully deleted a person from people list
   /agents:
     get:
       operationId: app.get_agents
@@ -141,7 +21,7 @@ paths:
       description: List of local folders under the user name (which correspond to aea projects)
       responses:
         200:
-          description: Successfully read people list operation
+          description: Successfully read agent list operation
           schema:
             type: array
             items:
@@ -192,3 +72,17 @@ paths:
           schema:
             type: string
 
+  /protocols:
+    get:
+      operationId: app.get_registered_protocols
+      tags:
+      - agents
+      summary: Return list of all registered protocols
+      description: List of local folders under the packages protocols directory
+      responses:
+        200:
+          description: Successfully read people list operation
+          schema:
+            type: array
+            items:
+              type: string
